--- a/main/output_main.css
+++ b/main/output_main.css
@@ -618,10 +618,6 @@ video {
   margin-left: 1rem;
 }
 
-.ml-\[2px\] {
-  margin-left: 2px;
-}
-
 .mr-4 {
   margin-right: 1rem;
 }
@@ -640,10 +636,6 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
 }
 
 .mt-\[-20px\] {
@@ -676,10 +668,6 @@ video {
 
 .hidden {
   display: none;
-}
-
-.h-10 {
-  height: 2.5rem;
 }
 
 .h-40 {
@@ -733,10 +721,6 @@ video {
 
 .w-8 {
   width: 2rem;
-}
-
-.w-\[100px\] {
-  width: 100px;
 }
 
 .w-\[50px\] {
@@ -804,10 +788,6 @@ video {
   align-self: center;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-b-\[50\%\] {
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 50%;
@@ -816,15 +796,6 @@ video {
 .rounded-t-\[50\%\] {
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -965,6 +936,10 @@ video {
 
 .pt-\[200px\] {
   padding-top: 200px;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-left {
@@ -1445,10 +1420,6 @@ video {
 }
 
 @media (max-width: 999px) {
-  .sm\:float-left {
-    float: left;
-  }
-
   .sm\:float-none {
     float: none;
   }
