--- a/main/output_main.css
+++ b/main/output_main.css
@@ -658,6 +658,14 @@ video {
   margin-top: 2px;
 }
 
+.ml-\[-10px\] {
+  margin-left: -10px;
+}
+
+.ml-\[-5px\] {
+  margin-left: -5px;
+}
+
 .inline {
   display: inline;
 }
@@ -902,6 +910,10 @@ video {
   padding-left: 2.5rem;
 }
 
+.pl-\[-2px\] {
+  padding-left: -2px;
+}
+
 .pl-\[50px\] {
   padding-left: 50px;
 }
@@ -912,6 +924,10 @@ video {
 
 .pt-16 {
   padding-top: 4rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .pt-20 {
@@ -936,10 +952,6 @@ video {
 
 .pt-\[200px\] {
   padding-top: 200px;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
 }
 
 .text-left {
@@ -1007,10 +1019,6 @@ video {
 
 .leading-8 {
   line-height: 2rem;
-}
-
-.leading-9 {
-  line-height: 2.25rem;
 }
 
 .text-\[\#444\] {
