--- a/artworks/themes/Gallery/layouts/partials/site_head.html
+++ b/artworks/themes/Gallery/layouts/partials/site_head.html
@@ -20,8 +20,9 @@
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
   {{ partial "opengraph.html" . }}
-  {{ $css := resources.Get "/css/styles.css" | resources.PostCSS (dict "inlineImports" true) | resources.Minify | resources.Fingerprint }}
-  <link rel="stylesheet" href="{{ $css.RelPermalink }}" />
+  <!-- {{ $css := resources.Get "/css/styles.css" | resources.PostCSS (dict "inlineImports" true) | resources.Minify | resources.Fingerprint }} -->
+  <!-- <link rel="stylesheet" href="{{ $css.RelPermalink }}" /> -->
+  <link rel="stylesheet" href="https://zjh.asia/artworks/artworks.css" />
   {{ $js := resources.Get "js/main.js" | js.Build (dict "minify" true) | resources.Fingerprint }}
   <script src="{{ $js.RelPermalink }}" defer></script>
 </head>
