--- a/main/input.css
+++ b/main/input.css
@@ -30,22 +30,22 @@
     @apply p-1 
 }
 .bottom-link{
-    @apply  font-bold hover:drop-shadow-[0_0_6px_rgba(255,255,255,0.5)]
+    @apply  hover:drop-shadow-[0_0_6px_rgba(255,255,255,0.5)]
 }
 .bottom-link-sm{
-    @apply text-white bottom-link text-base
+    @apply text-black bottom-link text-base 
 }
 .bottom-link-lg{
-    @apply text-white bottom-link text-lg
+    @apply text-gray-300 bottom-link text-base hover:text-gray-400/60 
 }
 .bottom-link-social{
-    @apply text-gray-200 bottom-link text-base hover:text-white pr-1
+    @apply text-gray-300 bottom-link text-base hover:text-gray-400/60 pr-1
 }
 .bottom-link-friend{
-    @apply text-gray-200  text-base pr-1 mr-[-15px]
+    @apply text-gray-300  text-base pr-1 mr-[-15px]
 }
 .bottom-link-contact{
-    @apply text-gray-200 bottom-link text-sm hover:text-white
+    @apply text-gray-300 bottom-link text-sm hover:text-gray-400/60
 }
 .learned{
     @apply mb-5 sm:mb-3 bg-gradient-to-tr from-[#f9fafb] border border-[#e5e7eb] rounded-xl h-16 w-[90%] m-auto hover:from-[#f9fafb] hover:to-[#f3f4f6] shadow-sm
@@ -65,7 +65,7 @@
     @apply text-xs text-[#888] 
 }
 .more-basis{
-    @apply basis-1/3  m-5
+    @apply basis-full  m-5
 }
 .more-pic{
     @apply rounded-lg border border-gray-200 shadow-md hover:scale-[1.01] duration-300 hover:shadow-lg sm:w-[250px] m-auto
