--- a/main/output_main.css
+++ b/main/output_main.css
@@ -570,10 +570,6 @@ video {
   z-index: 10;
 }
 
-.z-\[-1\] {
-  z-index: -1;
-}
-
 .float-right {
   float: right;
 }
@@ -590,10 +586,6 @@ video {
   margin-bottom: 0px;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -606,36 +598,16 @@ video {
   margin-bottom: 100px;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
 .ml-4 {
   margin-left: 1rem;
 }
 
+.ml-\[-5px\] {
+  margin-left: -5px;
+}
+
 .mr-4 {
   margin-right: 1rem;
-}
-
-.mr-\[-2px\] {
-  margin-right: -2px;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
 }
 
 .mt-\[-20px\] {
@@ -658,14 +630,6 @@ video {
   margin-top: 2px;
 }
 
-.ml-\[-10px\] {
-  margin-left: -10px;
-}
-
-.ml-\[-5px\] {
-  margin-left: -5px;
-}
-
 .inline {
   display: inline;
 }
@@ -678,6 +642,10 @@ video {
   display: none;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .h-40 {
   height: 10rem;
 }
@@ -688,6 +656,10 @@ video {
 
 .h-5 {
   height: 1.25rem;
+}
+
+.h-\[220px\] {
+  height: 220px;
 }
 
 .h-\[230px\] {
@@ -715,24 +687,12 @@ video {
   height: 100vh;
 }
 
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-20 {
-  width: 5rem;
+.h-\[500px\] {
+  height: 500px;
 }
 
 .w-5 {
   width: 1.25rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-\[50px\] {
-  width: 50px;
 }
 
 .w-fit {
@@ -744,8 +704,12 @@ video {
   width: 100%;
 }
 
-.max-w-\[1024px\] {
-  max-width: 1024px;
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+
+.max-w-\[640px\] {
+  max-width: 640px;
 }
 
 .max-w-\[720px\] {
@@ -762,10 +726,6 @@ video {
 
 .flex-none {
   flex: none;
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -792,10 +752,6 @@ video {
   gap: 0.5rem;
 }
 
-.self-center {
-  align-self: center;
-}
-
 .rounded-b-\[50\%\] {
   border-bottom-right-radius: 50%;
   border-bottom-left-radius: 50%;
@@ -806,9 +762,36 @@ video {
   border-top-right-radius: 50%;
 }
 
+.border {
+  border-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
 }
 
 .bg-gradient-to-b {
@@ -829,6 +812,12 @@ video {
 
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-\[\#3e3e3e13\] {
+  --tw-gradient-from: #3e3e3e13 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(62 62 62 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-\[\#d94217\] {
@@ -878,6 +867,10 @@ video {
   --tw-gradient-to: #861103 var(--tw-gradient-to-position);
 }
 
+.to-\[\#9494941b\] {
+  --tw-gradient-to: #9494941b var(--tw-gradient-to-position);
+}
+
 .to-white {
   --tw-gradient-to: #fff var(--tw-gradient-to-position);
 }
@@ -894,8 +887,8 @@ video {
   padding: 1.25rem;
 }
 
-.pb-5 {
-  padding-bottom: 1.25rem;
+.p-7 {
+  padding: 1.75rem;
 }
 
 .pb-\[300px\] {
@@ -910,8 +903,8 @@ video {
   padding-left: 2.5rem;
 }
 
-.pl-\[-2px\] {
-  padding-left: -2px;
+.pl-20 {
+  padding-left: 5rem;
 }
 
 .pl-\[50px\] {
@@ -938,12 +931,8 @@ video {
   padding-top: 6rem;
 }
 
-.pt-3 {
-  padding-top: 0.75rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .pt-8 {
@@ -952,10 +941,6 @@ video {
 
 .pt-\[200px\] {
   padding-top: 200px;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
@@ -1005,12 +990,13 @@ video {
   line-height: 1.75rem;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
 }
 
-.font-extrabold {
-  font-weight: 800;
+.font-bold {
+  font-weight: 700;
 }
 
 .font-light {
@@ -1026,29 +1012,9 @@ video {
   color: rgb(68 68 68 / var(--tw-text-opacity));
 }
 
-.text-\[\#4f4d4a\] {
-  --tw-text-opacity: 1;
-  color: rgb(79 77 74 / var(--tw-text-opacity));
-}
-
-.text-\[\#686661\] {
-  --tw-text-opacity: 1;
-  color: rgb(104 102 97 / var(--tw-text-opacity));
-}
-
 .text-\[\#888\] {
   --tw-text-opacity: 1;
   color: rgb(136 136 136 / var(--tw-text-opacity));
-}
-
-.text-\[\#e4e4e4\] {
-  --tw-text-opacity: 1;
-  color: rgb(228 228 228 / var(--tw-text-opacity));
-}
-
-.text-\[\#f0c5ad\] {
-  --tw-text-opacity: 1;
-  color: rgb(240 197 173 / var(--tw-text-opacity));
 }
 
 .text-black {
@@ -1056,19 +1022,18 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity));
+.text-gray-400\/60 {
+  color: rgb(156 163 175 / 0.6);
 }
 
 .text-white {
@@ -1076,20 +1041,26 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.underline {
-  text-decoration-line: underline;
+.text-gray-300\/60 {
+  color: rgb(209 213 219 / 0.6);
 }
 
-.decoration-gray-500\/30 {
-  text-decoration-color: rgb(107 114 128 / 0.3);
+.text-gray-800\/60 {
+  color: rgb(31 41 55 / 0.6);
 }
 
-.decoration-1 {
-  text-decoration-thickness: 1px;
+.text-gray-700\/60 {
+  color: rgb(55 65 81 / 0.6);
 }
 
-.underline-offset-4 {
-  text-underline-offset: 4px;
+.text-gray-600\/30 {
+  color: rgb(75 85 99 / 0.3);
+}
+
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .duration-300 {
@@ -1213,10 +1184,6 @@ video {
   padding: 0.25rem;
 }
 
-.bottom-link {
-  font-weight: 700;
-}
-
 .bottom-link:hover {
   --tw-drop-shadow: drop-shadow(0 0 6px rgba(255,255,255,0.5));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1226,8 +1193,7 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-  font-weight: 700;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .bottom-link-sm:hover {
@@ -1236,16 +1202,16 @@ video {
 }
 
 .bottom-link-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-  font-weight: 700;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .bottom-link-lg:hover {
   --tw-drop-shadow: drop-shadow(0 0 6px rgba(255,255,255,0.5));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+  color: rgb(156 163 175 / 0.6);
 }
 
 .bottom-link-social {
@@ -1253,15 +1219,13 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-  font-weight: 700;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .bottom-link-social:hover {
   --tw-drop-shadow: drop-shadow(0 0 6px rgba(255,255,255,0.5));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / 0.6);
 }
 
 .bottom-link-friend {
@@ -1270,22 +1234,20 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .bottom-link-contact {
   font-size: 0.875rem;
   line-height: 1.25rem;
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-  font-weight: 700;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .bottom-link-contact:hover {
   --tw-drop-shadow: drop-shadow(0 0 6px rgba(255,255,255,0.5));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / 0.6);
 }
 
 .learned {
@@ -1375,7 +1337,7 @@ video {
 
 .more-basis {
   margin: 1.25rem;
-  flex-basis: 33.333333%;
+  flex-basis: 100%;
 }
 
 .more-pic {
@@ -1432,29 +1394,17 @@ video {
     float: none;
   }
 
-  .sm\:m-auto {
-    margin: auto;
-  }
-
-  .sm\:mb-4 {
-    margin-bottom: 1rem;
-  }
-
   .sm\:block {
     display: block;
-  }
-
-  .sm\:inline {
-    display: inline;
-  }
-
-  .sm\:hidden {
-    display: none;
   }
 
   .sm\:h-fit {
     height: -moz-fit-content;
     height: fit-content;
+  }
+
+  .sm\:h-\[800px\] {
+    height: 800px;
   }
 
   .sm\:max-w-\[100\%\] {
@@ -1465,8 +1415,8 @@ video {
     max-width: 300px;
   }
 
-  .sm\:grid-cols-none {
-    grid-template-columns: none;
+  .sm\:max-w-\[200px\] {
+    max-width: 200px;
   }
 
   .sm\:p-5 {
@@ -1524,6 +1474,21 @@ video {
     line-height: 1rem;
   }
 
+  .sm\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .sm\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+  }
+
+  .sm\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
   .sm\:leading-5 {
     line-height: 1.25rem;
   }
@@ -1537,19 +1502,11 @@ video {
   .md\:flex {
     display: flex;
   }
-
-  .md\:grid {
-    display: grid;
-  }
 }
 
 @media (min-width: 1200px) and (max-width: 1279px) {
   .lg\:flex {
     display: flex;
-  }
-
-  .lg\:grid {
-    display: grid;
   }
 }
 
@@ -1557,28 +1514,16 @@ video {
   .xl\:flex {
     display: flex;
   }
-
-  .xl\:grid {
-    display: grid;
-  }
 }
 
 @media (min-width: 1600px) and (max-width: 2240px) {
   .\32xl\:flex {
     display: flex;
   }
-
-  .\32xl\:grid {
-    display: grid;
-  }
 }
 
 @media (min-width: 2240px) {
   .\33xl\:flex {
     display: flex;
-  }
-
-  .\33xl\:grid {
-    display: grid;
   }
 }
