--- a/main/input.css
+++ b/main/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .contact-text{
-    @apply underline decoration-dashed hover:bg-gray-400 hover:text-white duration-300
+    @apply underline decoration-dashed hover:bg-purple-400 hover:text-white duration-300
 }
 .lang{
     @apply text-purple-500 hover:bg-purple-400 hover:text-white duration-200
@@ -36,16 +36,16 @@
     @apply text-black bottom-link text-base 
 }
 .bottom-link-lg{
-    @apply text-gray-300 bottom-link text-base hover:text-gray-400/60 
+    @apply text-purple-300 bottom-link text-base hover:text-purple-400/80 
 }
 .bottom-link-social{
-    @apply text-gray-300 bottom-link text-base hover:text-gray-400/60 pr-1
+    @apply text-purple-300 bottom-link text-base hover:text-purple-400/80 pr-1
 }
 .bottom-link-friend{
-    @apply text-gray-300  text-base pr-1 mr-[-15px]
+    @apply text-purple-300  text-base pr-1 mr-[-15px]
 }
 .bottom-link-contact{
-    @apply text-gray-300 bottom-link text-sm hover:text-gray-400/60
+    @apply text-purple-300 bottom-link text-sm hover:text-purple-400/80
 }
 .learned{
     @apply mb-5 sm:mb-3 bg-gradient-to-tr from-[#f9fafb] border border-[#e5e7eb] rounded-xl h-16 w-[90%] m-auto hover:from-[#f9fafb] hover:to-[#f3f4f6] shadow-sm
@@ -68,7 +68,7 @@
     @apply basis-full  m-5
 }
 .more-pic{
-    @apply rounded-lg border border-gray-200 shadow-md hover:scale-[1.01] duration-300 hover:shadow-lg sm:w-[250px] m-auto
+    @apply rounded-lg border border-purple-200 shadow-md hover:scale-[1.01] duration-300 hover:shadow-lg sm:w-[250px] m-auto
 }
 .more-info{
     @apply text-[#888] p-2 pt-0 pb-4 text-center
