--- a/main/output_main.css
+++ b/main/output_main.css
@@ -887,10 +887,6 @@ video {
   padding: 1.25rem;
 }
 
-.p-7 {
-  padding: 1.75rem;
-}
-
 .pb-\[300px\] {
   padding-bottom: 300px;
 }
@@ -929,6 +925,10 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .pt-8 {
