--- a/life/themes/hugo-bearblog-local/layouts/partials/header.html
+++ b/life/themes/hugo-bearblog-local/layouts/partials/header.html
@@ -1,5 +1,8 @@
 <a href="{{ "blog" | relURL }}" class="title">
   <!-- <h2>{{ .Site.Title }}</h2> -->
-  <h2>生活记录</h2>
+  <h2 style=" padding-bottom: 5px; color: #333;">
+    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/illustrations/casual-life-3d-stack-of-books-mockup.png?x-oss-process=style/small_size_rule" alt="" style="display: inline; height: 60px; margin-bottom: -20px; padding-right: 10px;">
+    生活记录
+  </h2>
 </a>
 <nav>{{- partial "nav.html" . -}}</nav>
