--- a/life/themes/hugo-bearblog-local/layouts/partials/header.html
+++ b/life/themes/hugo-bearblog-local/layouts/partials/header.html
@@ -1,8 +1,8 @@
 <a href="{{ "blog" | relURL }}" class="title">
   <!-- <h2>{{ .Site.Title }}</h2> -->
-  <h2 style=" padding-bottom: 5px; color: #333;">
-    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/illustrations/casual-life-3d-stack-of-books-mockup.png?x-oss-process=style/small_size_rule" alt="" style="display: inline; height: 60px; margin-bottom: -20px; padding-right: 10px;">
-    生活记录
-  </h2>
+  <dvi style=" padding-bottom: 5px; color: #333;">
+    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/illustrations/dizzy-book-2.gif" alt="" style="display: inline; width: 100px; position:absolute;">
+    <div style="margin-top: 20px; font-size: 25px;  padding-top: -5px; width: 100px;text-align: center; font-weight: bold;">生活</div>
+  </div>
 </a>
 <nav>{{- partial "nav.html" . -}}</nav>
