--- a/single/output_main.css
+++ b/single/output_main.css
@@ -594,8 +594,40 @@ video {
   margin-top: 2px;
 }
 
+.mt-\[-300px\] {
+  margin-top: -300px;
+}
+
+.mt-\[-100px\] {
+  margin-top: -100px;
+}
+
+.mt-\[-20px\] {
+  margin-top: -20px;
+}
+
+.mb-\[-20px\] {
+  margin-bottom: -20px;
+}
+
+.mb-\[-5px\] {
+  margin-bottom: -5px;
+}
+
+.mb-\[-7px\] {
+  margin-bottom: -7px;
+}
+
+.mt-\[-10px\] {
+  margin-top: -10px;
+}
+
 .inline {
   display: inline;
+}
+
+.flex {
+  display: flex;
 }
 
 .hidden {
@@ -631,8 +663,24 @@ video {
   height: 100vh;
 }
 
+.w-36 {
+  width: 9rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
+.w-44 {
+  width: 11rem;
+}
+
 .w-72 {
   width: 18rem;
+}
+
+.w-\[720px\] {
+  width: 720px;
 }
 
 .w-fit {
@@ -644,8 +692,24 @@ video {
   width: 100%;
 }
 
+.w-32 {
+  width: 8rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
 .max-w-\[640px\] {
   max-width: 640px;
+}
+
+.basis-1\/2 {
+  flex-basis: 50%;
+}
+
+.basis-1\/3 {
+  flex-basis: 33.333333%;
 }
 
 .flex-row {
@@ -723,14 +787,6 @@ video {
   --tw-gradient-to: #861103 var(--tw-gradient-to-position);
 }
 
-.to-gray-100 {
-  --tw-gradient-to: #f3f4f6 var(--tw-gradient-to-position);
-}
-
-.to-gray-200 {
-  --tw-gradient-to: #e5e7eb var(--tw-gradient-to-position);
-}
-
 .to-gray-200\/50 {
   --tw-gradient-to: rgb(229 231 235 / 0.5) var(--tw-gradient-to-position);
 }
@@ -767,6 +823,14 @@ video {
   padding-top: 0.25rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
+}
+
 .pt-5 {
   padding-top: 1.25rem;
 }
@@ -793,6 +857,14 @@ video {
 
 .pt-\[40px\] {
   padding-top: 40px;
+}
+
+.pt-\[-100px\] {
+  padding-top: -100px;
+}
+
+.pt-\[-300px\] {
+  padding-top: -300px;
 }
 
 .text-center {
@@ -822,6 +894,16 @@ video {
   line-height: 1;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -838,6 +920,10 @@ video {
 
 .font-light {
   font-weight: 300;
+}
+
+.leading-3 {
+  line-height: .75rem;
 }
 
 .text-black {
@@ -868,6 +954,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-yellow-600 {
+  --tw-text-opacity: 1;
+  color: rgb(202 138 4 / var(--tw-text-opacity));
+}
+
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -876,6 +967,47 @@ video {
 
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.nav {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 10;
+  height: 5rem;
+  width: 100%;
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.1;
+  padding-top: 1.25rem;
+  font-weight: 700;
+  color: rgb(55 65 81 / 0.6);
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.nav-title {
+  margin: auto;
+  text-align: center;
+}
+
+.nav-update-timeframe {
+  text-align: center;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 300;
+}
+
+/* bg-gradient-to-t from-[#fff] via-gray-100/50 to-gray-200/50 */
+
+.poster {
+  height: 300px;
+  width: 300px;
+  text-align: center;
+  font-weight: 300;
 }
 
 .contact-text {
