--- a/tech/docs/.vitepress/theme/input.css
+++ b/tech/docs/.vitepress/theme/input.css
@@ -17,13 +17,13 @@
   /* 2 */
 }
 .VPImage {
-  @apply p-10 ml-20 sm:p-5 sm:m-0;
+  @apply mt-5 
 }
 .image-bg{
-  @apply ml-20 sm:m-0;
+  @apply sm:m-0  mt-2;
 }
 .VPHome{
-  @apply bg-gradient-to-b from-emerald-500/30 via-emerald-50/10 to-white dark:bg-none
+  @apply bg-gradient-to-b from-emerald-500/30 via-emerald-50/10 to-white dark:bg-none 
 }
 
 .VPFeatures .title{
@@ -34,8 +34,8 @@
   @apply text-[#3eb7aa];
 }
 :root {
-  --vp-home-hero-image-filter: blur(64px);
-  --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(86, 166, 99, 0.6) 30%, rgba(0, 255, 42, 0.532) 10%);
+  --vp-home-hero-image-filter: blur(56px);
+  --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(36, 255, 62, 0.646) 30%, rgba(255, 183, 120, 0.6) 10%);
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: #35baa2;
   --vp-c-text-2: #30a79b;
