--- a/tech/docs/.vitepress/theme/output_vitepress.css
+++ b/tech/docs/.vitepress/theme/output_vitepress.css
@@ -550,19 +550,11 @@ video {
 }
 
 .VPImage {
-  margin-left: 5rem;
-  padding: 2.5rem;
-}
-
-@media (max-width: 900px) {
-  .VPImage {
-    margin: 0px;
-    padding: 1.25rem;
-  }
+  margin-top: 1.25rem;
 }
 
 .image-bg {
-  margin-left: 5rem;
+  margin-top: 0.5rem;
 }
 
 @media (max-width: 900px) {
@@ -596,8 +588,8 @@ video {
 }
 
 :root {
-  --vp-home-hero-image-filter: blur(64px);
-  --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(86, 166, 99, 0.6) 30%, rgba(0, 255, 42, 0.532) 10%);
+  --vp-home-hero-image-filter: blur(56px);
+  --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(36, 255, 62, 0.646) 30%, rgba(255, 183, 120, 0.6) 10%);
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: #35baa2;
   --vp-c-text-2: #30a79b;
