update content 20231021 last

--- a/life/themes/hugo-bearblog-local/layouts/_default/single.html
+++ b/life/themes/hugo-bearblog-local/layouts/_default/single.html
@@ -4,7 +4,7 @@
 <p>
   <strong>
     <time datetime='{{ .Date.Format "2006-01-02" }}' pubdate>
-      {{ .Date.Format (default "2006年1月2日" .Site.Params.dateFormat) }}
+      {{ .Date.Format (default "2006/1/2" .Site.Params.dateFormat) }}
     </time>
   </strong>
 </p>
