--- a/life/themes/hugo-bearblog-local/layouts/partials/header.html
+++ b/life/themes/hugo-bearblog-local/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<a href="{{ "blog" | relURL }}" class="title">
+<a href="{{ "" | relURL }}" class="title">
   <h2>{{ .Site.Title }}</h2>
   <!-- <h2>生活记录</h2> -->
 </a>
