--- a/life/themes/hugo-bearblog-local/layouts/_default/list.html
+++ b/life/themes/hugo-bearblog-local/layouts/_default/list.html
@@ -11,7 +11,7 @@
     <li>
       <span>
           <time datetime='{{ .Date.Format "2006-01-22" }}' pubdate>
-            {{ .Date.Format (default "2006年1月2日" .Site.Params.dateFormat) }}
+            {{ .Date.Format (default "2006/01/02" .Site.Params.dateFormat) }}
           </time>
       </span>
       <a href="{{ .Permalink }}">{{ .Title }}</a>
