--- a/life/themes/hugo-bearblog-local/layouts/partials/style.html
+++ b/life/themes/hugo-bearblog-local/layouts/partials/style.html
@@ -55,7 +55,19 @@
   }
 
   table {
-    width: 100%;
+    border: 1px solid #000;
+    /* width: 100%; */
+    border-spacing: 0px;
+  }
+
+  th{
+    border: 1px solid #000;
+    padding: 5px;
+  }
+  td{
+    border: 1px solid #000;
+    padding: 5px;
+
   }
 
   img {
