--- a/tech/docs/.vitepress/theme/input.css
+++ b/tech/docs/.vitepress/theme/input.css
@@ -16,6 +16,10 @@
   border-color: #000;
   /* 2 */
 }
+table{
+  display:table !important;
+  @apply w-full;
+}
 .VPImage {
   @apply mt-5 sm:mt-0
 }
@@ -27,7 +31,7 @@
 }
 
 .VPFeatures .title{
-  @apply text-[#21635c9a]
+  @apply text-[#21635ce4]
 }
 .VPButton{
   border: none !important;
@@ -37,7 +41,7 @@
   --vp-home-hero-image-filter: blur(56px);
   --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(36, 255, 62, 0.646) 30%, rgba(255, 183, 120, 0.6) 10%);
   --vp-home-hero-name-color: transparent;
-  --vp-home-hero-name-background: #35baa2;
+  --vp-home-hero-name-background: #369b91;
   --vp-c-text-2: #30a79b;
   --vp-button-alt-border: none;
   --vp-button-alt-hover-border: none;
@@ -45,10 +49,10 @@
   --vp-button-alt-text: #3eb7aa;
   --vp-button-alt-hover-text: #3eb7aa;
   --vp-button-brand-bg: #2ea599a9;
-  --vp-button-brand-hover-bg: #37c8b9;
-  --vp-c-brand: #37c8b9;
-  --vp-c-brand-light: #37c8b9;
-  --vp-c-brand-lighter: #f5f5f7;
+  --vp-button-brand-hover-bg: #369b91;
+  --vp-c-brand: #2b6f5d;
+  --vp-c-brand-light: #3eb7ab6d;
+  --vp-c-brand-lighter: #3eb7ab46;
 }
 /* .VPHomeHero .container{
   max-width: 960px !important;
@@ -58,7 +62,7 @@
   max-width: 960px !important;
 } */
 .VPHomeHero .text{
-  @apply  text-[#37c8b976] pb-2 pt-2 leading-[70px] sm:leading-[40px]
+  @apply  text-[#2da79b9a] pb-2 pt-2 leading-[70px] sm:leading-[40px]
 }
 .VPButton{
   @apply rounded-lg
